test/unit/cxtm/jtm/invalid/topic-detached-no-itemtype.jtm
{"version":"1.0","item_identifiers":["#topic"]}
